[project]
name = "bus-connector-mcp"
version = "0.1.0"
description = "客户机侧总线接入进程 — 外部 MCP 应用通过 InboxMCP 接入 Tagentacle 总线"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "tagentacle-py-core",
    "tagentacle-py-mcp",
]

[tool.uv.sources]
tagentacle-py-core = { path = "../tagentacle-py-core", editable = true }
tagentacle-py-mcp = { path = "../tagentacle-py-mcp", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["connector.py"]
